FreeBSD 10.1-RELEASE build issue

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.2.0-rc4
    • Affects Version/s: 3.2.0-rc1
    • Component/s: Build
    • None
    • Environment:
    • Fully Compatible
    • FreeBSD
    • Hide

      wget https://fastdl.mongodb.org/src/mongodb-src-r3.2.0-rc1.tar.gz
      tar -zxvf mongodb-src-r3.2.0-rc1.tar.gz
      cd ./mongodb-src-r3.2.0-rc1
      scons all

      Show
      wget https://fastdl.mongodb.org/src/mongodb-src-r3.2.0-rc1.tar.gz tar -zxvf mongodb-src-r3.2.0-rc1.tar.gz cd ./mongodb-src-r3.2.0-rc1 scons all
    • Platform C (11/20/15)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Error while building MongoDB 3.2.0-rc1 under FreeBSD 10.1@amd64:

      c++ -o build/opt/mongo/util/net/hostname_canonicalization.o -c -Wnon-virtual-dtor -Woverloaded-virtual -std=c++11 -fno-
      omit-frame-pointer -fno-omit-frame-pointer -fPIC -fno-strict-aliasing -ggdb -pthread -Wall -Wsign-compare -Wno-unknown-
      pragmas -Winvalid-pch -O2 -Wno-unused-function -Wno-unused-private-field -Wno-deprecated-declarations -Wno-tautological
      -constant-out-of-range-compare -Wno-unused-const-variable -Wno-missing-braces -Wno-null-conversion -fno-builtin-memcmp 
      -DPCRE_STATIC -DNDEBUG -DBOOST_THREAD_VERSION=4 -DBOOST_THREAD_DONT_PROVIDE_VARIADIC_THREAD -DBOOST_SYSTEM_NO_DEPRECATE
      D -DBOOST_THREAD_DONT_PROVIDE_INTERRUPTIONS -DBOOST_THREAD_HAS_NO_EINTR_BUG -Isrc/third_party/asio-asio-1-11-0/asio/inc
      lude -Isrc/third_party/s2 -Isrc/third_party/pcre-8.37 -Isrc/third_party/boost-1.56.0 -Ibuild/opt -Isrc src/mongo/util/n
      et/hostname_canonicalization.cpp
      src/mongo/util/net/hostname_canonicalization.cpp:124:60: error: member access into incomplete type 'struct sockaddr_in'
                      sin_addr = reinterpret_cast<void*>(&addr_in->sin_addr);
      src/mongo/util/net/hostname_canonicalization.cpp:124:51: note: to match this '('
                      sin_addr = reinterpret_cast<void*>(&addr_in->sin_addr);
                                                        ^
      src/mongo/util/net/hostname_canonicalization.cpp:127:61: error: member access into incomplete type
            'struct sockaddr_in6'
                      sin_addr = reinterpret_cast<void*>(&addr_in6->sin6_addr);
                                                                  ^
      src/mongo/util/net/hostname_canonicalization.cpp:126:24: note: forward declaration of 'sockaddr_in6'
                      struct sockaddr_in6* addr_in6 = reinterpret_cast<struct sockaddr_in6*>(addr);
                             ^
      src/mongo/util/net/hostname_canonicalization.cpp:127:63: error: expected ')'
                      sin_addr = reinterpret_cast<void*>(&addr_in6->sin6_addr);
                                                                    ^
      src/mongo/util/net/hostname_canonicalization.cpp:127:51: note: to match this '('
                      sin_addr = reinterpret_cast<void*>(&addr_in6->sin6_addr);
                                                        ^
      4 errors generated.
      scons: *** [build/opt/mongo/util/net/hostname_canonicalization.o] Error 1
      scons: building terminated because of errors.
      

      P.S.: MongoDB 3.2.0-rc0 was built successfully.

            Assignee:
            Mark Benvenuto
            Reporter:
            Andrew Shevchuk
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: