SERVER-21216 Fix FreeBSD & OpenBSD compilation, add stack_locator