src/mongo/platform/stack_locator_unknown.cpp
@@ -36,4 +36,4 @@ namespace mongo {
 
 StackLocator::StackLocator() = default;
 
-// namespace mongo
+}  // namespace mongo
