src/mongo/util/net/hostname_canonicalization.cpp
@@ -34,6 +34,7 @@
 
 #if !defined(_WIN32)
 #include <arpa/inet.h>
+#include <netinet/in.h>
 #include <sys/types.h>
 #include <sys/socket.h>
 #include <netdb.h>
